Fix stars not showing

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -45,7 +45,7 @@ section.intro {
 canvas {
 	position: absolute;
 	top: 0;
-	z-index: -1;
+	z-index: 0;
 }
 
 .main {
@@ -177,7 +177,6 @@ a.more {
 }
 
 section.full {
-	background-color: $bg-color;
 	color: white;
 
 	min-width: 320px;
